# RISC-V-Numeric-Ops-Simulator

./: .gitignore  CMakeLists.txt  README.md  ai_report.json  count_ai_lines.py
src/core/: alu.cpp  alu.hpp  bitvec.cpp  bitvec.hpp  f32.cpp  f32.hpp  mdu.cpp  mdu.hpp  rv32_cpu.cpp  rv32_cpu.hpp  shifter.cpp  shifter.hpp  twos.cpp  twos.hpp
tests/: alu_tests.cpp  bitvec_tests.cpp  cpu_tests.cpp  float_tests.cpp  mdu_tests.cpp  twos_tests.cpp
